Store Grn Changes Signed-off-by: HNDITDushan <s.t.dushan@mail.com>

--- a/src/main/webapp/store/store_asset_registry.xhtml
+++ b/src/main/webapp/store/store_asset_registry.xhtml
@@ -122,7 +122,10 @@
                                     </f:facet>
                                     #{i.id}<br/>
                                     #{i.childStocks.size()}<br/>
-                                    #{i.childStocks}<br/>
+                                    <ui:repeat value="#{i.childStocks}" var="ii">
+                                        <p:outputLabel value="#{ii.itemBatch.item.name}" />
+                                    </ui:repeat>
+                                    <br/>
                                     <p:commandButton value="Fixed Asset Addition Form" ajax="false" action="report_fixed_asset_addition_form">
                                         <f:setPropertyActionListener value="#{i}" target="#{storeReportsStock.selectedInventoryStock}" ></f:setPropertyActionListener>
                                     </p:commandButton>
