--- a/src/main/webapp/collecting_centre/collecting_centre_search_bill_own.xhtml
+++ b/src/main/webapp/collecting_centre/collecting_centre_search_bill_own.xhtml
@@ -12,7 +12,7 @@
                 <h:form>
                     <p:panel>
                         <f:facet name="header" >
-                            <h:outputLabel value="OPD BILL SEARCH "/>                          
+                            <h:outputLabel value="Collecting Center Bill Search"/>                          
                             <h:panelGrid columns="5" >
                                 <h:outputLabel value="From Date"/>
                                 <p:calendar styleClass="dateTimePicker" id="fromDate" value="#{searchController.fromDate}" navigator="false" pattern="dd MMMM yyyy hh mm ss a" >      
