Signed-off-by: lahirumadushanka <lahirumadushanka2100@gmail.com>

--- a/src/main/webapp/bill_reprint.xhtml
+++ b/src/main/webapp/bill_reprint.xhtml
@@ -117,113 +117,134 @@
                     </p:panel>
 
 
+                    <p:panel rendered="#{billSearch.bill.billType ne 'CollectingCentreBill'}">
+                        <h:panelGroup rendered="#{sessionController.institutionPreference.opdBillPaperType eq 'FiveFivePaper'}" >
 
-                    <h:panelGroup rendered="#{sessionController.institutionPreference.opdBillPaperType eq 'FiveFivePaper'}" >
-                        
-                        <h:panelGroup id="gpBillPreview" rendered="#{sessionController.institutionPreference.printLabelForOPdBill eq false
-                                                                     and sessionController.institutionPreference.applicationInstitution eq 'Ruhuna'
-                                                                     and sessionController.institutionPreference.fiveFivePaperWithHeadings eq false}">
-                            <div class="nonPrintBlock">
-                                <p:commandButton value="Print" ajax="false" action="#"  >
-                                    <p:printer target="gpBillPreview" ></p:printer>
-                                </p:commandButton>
-                            </div>
-                            <bi:opdBillPrintRuhunu bill="#{billSearch.bill}" dup="true"/>
-                            <!--  <br/>
-                                                    <h:panelGroup >
-                                                        <bi:opdBillPrintRuhunu bill="#{billSearch.bill.cancelledBill}" />                        
-                                                    </h:panelGroup>-->
-
-                        </h:panelGroup>
-
-                        <h:panelGroup id="gpBillPreviewCoop" rendered="#{sessionController.institutionPreference.printLabelForOPdBill eq true}">
-                            <div class="nonPrintBlock">
-                                <p:commandButton value="Print" ajax="false" action="#"  >
-                                    <p:printer target="gpBillPreviewCoop" ></p:printer>
-                                </p:commandButton>
-                            </div>
-                            <bi:opdBillPrintCoop bill="#{billSearch.bill}" dup="false"/>
-
-                        </h:panelGroup>
-
-                        <h:panelGroup rendered="#{sessionController.institutionPreference.fiveFivePaperWithHeadings eq true}">
-
-                            <div class="nonPrintBlock">
-                                <p:commandButton value="Print" ajax="false" action="#"  >
-                                    <p:printer target="fiveFivePaperWithHeadings" ></p:printer>
-                                </p:commandButton>
-
-                                <p:commandButton value="New Bill" ajax="false" action="#{billController.prepareNewBill()}" >
-                                </p:commandButton>
-
-                                <p:commandButton ajax="false" value="Batch Cancel" action="#{billController.cancellAll}" style="float: right;"
-                                                 onclick="if (!confirm('Are you sure you want to Cancel This Bill ?'))
-                                                             return false;"/>
-                            </div>
-                            <h:panelGroup id="fiveFivePaperWithHeadings">
-                                <ui:repeat value="#{billSearch.bill}" var="b">
-                                    <bi:five_five_paper_with_headings bill="#{b}"/>                        
-                                </ui:repeat>
-                            </h:panelGroup>
-                        </h:panelGroup>
-
-                        <h:panelGroup id="gpBillPreviewRmh" rendered="#{sessionController.institutionPreference.applicationInstitution eq 'Rmh' }">
-                            <div class="nonPrintBlock">
-                                <p:commandButton value="Print" ajax="false" action="#"  >
-                                    <p:printer target="gpBillPreviewRmh" ></p:printer>
-                                </p:commandButton>
-                            </div>
-                            <bi:opdBillPrintRmh bill="#{billSearch.bill}" dup="false"/>
-
-                        </h:panelGroup>
-                    </h:panelGroup>
-
-                    <h:panelGroup rendered="#{sessionController.institutionPreference.opdBillPaperType eq 'PosPaper'}">
-                        <h:panelGroup rendered="#{sessionController.institutionPreference.opdPosBillWithoutLogo eq 'false'}">
-                            <div class="nonPrintBlock">
-                                <p:commandButton value="Print" ajax="false" action="#"  >
-                                    <p:printer target="gpPosBill" ></p:printer>
-                                </p:commandButton>
-
-                                <p:commandButton value="New Bill" ajax="false" action="#{billController.prepareNewBill()}" >
-                                </p:commandButton>
-
-                                <p:commandButton ajax="false" value="Batch Cancel" action="#{billController.cancellAll}" style="float: right;"
-                                                 onclick="if (!confirm('Are you sure you want to Cancel This Bill ?'))
-                                                         return false;"/>
-                            </div>
-                            <h:panelGroup id="gpPosBill">
-                                <div style="page-break-after: always;">
-                                    <bi:posOpdBill bill="#{billSearch.bill}" duplicate="true"/>  
+                            <h:panelGroup id="gpBillPreview" rendered="#{sessionController.institutionPreference.printLabelForOPdBill eq false
+                                                                         and sessionController.institutionPreference.applicationInstitution eq 'Ruhuna'
+                                                                         and sessionController.institutionPreference.fiveFivePaperWithHeadings eq false}">
+                                <div class="nonPrintBlock">
+                                    <p:commandButton value="Print" ajax="false" action="#"  >
+                                        <p:printer target="gpBillPreview" ></p:printer>
+                                    </p:commandButton>
                                 </div>
-                                <div></div>
-                                <div style="page-break-after: always;">
-                                    <bi:posOpdBill bill="#{billSearch.bill}" duplicate="true"/>  
+                                <bi:opdBillPrintRuhunu bill="#{billSearch.bill}" dup="true"/>
+                                <!--  <br/>
+                                                        <h:panelGroup >
+                                                            <bi:opdBillPrintRuhunu bill="#{billSearch.bill.cancelledBill}" />                        
+                                                        </h:panelGroup>-->
+
+                            </h:panelGroup>
+
+                            <h:panelGroup id="gpBillPreviewCoop" rendered="#{sessionController.institutionPreference.printLabelForOPdBill eq true}">
+                                <div class="nonPrintBlock">
+                                    <p:commandButton value="Print" ajax="false" action="#"  >
+                                        <p:printer target="gpBillPreviewCoop" ></p:printer>
+                                    </p:commandButton>
                                 </div>
+                                <bi:opdBillPrintCoop bill="#{billSearch.bill}" dup="false"/>
+
+                            </h:panelGroup>
+
+                            <h:panelGroup rendered="#{sessionController.institutionPreference.fiveFivePaperWithHeadings eq true}">
+
+                                <div class="nonPrintBlock">
+                                    <p:commandButton value="Print" ajax="false" action="#"  >
+                                        <p:printer target="fiveFivePaperWithHeadings" ></p:printer>
+                                    </p:commandButton>
+
+                                    <p:commandButton value="New Bill" ajax="false" action="#{billController.prepareNewBill()}" >
+                                    </p:commandButton>
+
+                                    <p:commandButton ajax="false" value="Batch Cancel" action="#{billController.cancellAll}" style="float: right;"
+                                                     onclick="if (!confirm('Are you sure you want to Cancel This Bill ?'))
+                                                                 return false;"/>
+                                </div>
+                                <h:panelGroup id="fiveFivePaperWithHeadings">
+                                    <ui:repeat value="#{billSearch.bill}" var="b">
+                                        <bi:five_five_paper_with_headings bill="#{b}"/>                        
+                                    </ui:repeat>
+                                </h:panelGroup>
+                            </h:panelGroup>
+
+                            <h:panelGroup id="gpBillPreviewRmh" rendered="#{sessionController.institutionPreference.applicationInstitution eq 'Rmh' }">
+                                <div class="nonPrintBlock">
+                                    <p:commandButton value="Print" ajax="false" action="#"  >
+                                        <p:printer target="gpBillPreviewRmh" ></p:printer>
+                                    </p:commandButton>
+                                </div>
+                                <bi:opdBillPrintRmh bill="#{billSearch.bill}" dup="false"/>
+
                             </h:panelGroup>
                         </h:panelGroup>
 
+                        <h:panelGroup rendered="#{sessionController.institutionPreference.opdBillPaperType eq 'PosPaper'}">
+                            <h:panelGroup rendered="#{sessionController.institutionPreference.opdPosBillWithoutLogo eq 'false'}">
+                                <div class="nonPrintBlock">
+                                    <p:commandButton value="Print" ajax="false" action="#"  >
+                                        <p:printer target="gpPosBill" ></p:printer>
+                                    </p:commandButton>
 
-                        <h:panelGroup rendered="#{sessionController.institutionPreference.opdPosBillWithoutLogo eq 'true'}">
-                            <div class="nonPrintBlock">
-                                <p:commandButton value="Print" ajax="false" action="#"  >
-                                    <p:printer target="gpPosBillWithoutLogo" ></p:printer>
-                                </p:commandButton>
+                                    <p:commandButton value="New Bill" ajax="false" action="#{billController.prepareNewBill()}" >
+                                    </p:commandButton>
 
-                                <p:commandButton value="New Bill" ajax="false" action="#{billController.prepareNewBill()}" >
-                                </p:commandButton>
+                                    <p:commandButton ajax="false" value="Batch Cancel" action="#{billController.cancellAll}" style="float: right;"
+                                                     onclick="if (!confirm('Are you sure you want to Cancel This Bill ?'))
+                                                                 return false;"/>
+                                </div>
+                                <h:panelGroup id="gpPosBill">
+                                    <div style="page-break-after: always;">
+                                        <bi:posOpdBill bill="#{billSearch.bill}" duplicate="true"/>  
+                                    </div>
+                                    <div></div>
+                                    <div style="page-break-after: always;">
+                                        <bi:posOpdBill bill="#{billSearch.bill}" duplicate="true"/>  
+                                    </div>
+                                </h:panelGroup>
+                            </h:panelGroup>
 
-                                <p:commandButton ajax="false" value="Batch Cancel" action="#{billController.cancellAll}" style="float: right;"
-                                                 onclick="if (!confirm('Are you sure you want to Cancel This Bill ?'))
-                                                         return false;"/>
-                            </div>
-                            <h:panelGroup id="gpPosBillWithoutLogo">
-                                <bi:posOpdBillWithoutLogo bill="#{billSearch.bill}" duplicate="true"/>  
+
+                            <h:panelGroup rendered="#{sessionController.institutionPreference.opdPosBillWithoutLogo eq 'true'}">
+                                <div class="nonPrintBlock">
+                                    <p:commandButton value="Print" ajax="false" action="#"  >
+                                        <p:printer target="gpPosBillWithoutLogo" ></p:printer>
+                                    </p:commandButton>
+
+                                    <p:commandButton value="New Bill" ajax="false" action="#{billController.prepareNewBill()}" >
+                                    </p:commandButton>
+
+                                    <p:commandButton ajax="false" value="Batch Cancel" action="#{billController.cancellAll}" style="float: right;"
+                                                     onclick="if (!confirm('Are you sure you want to Cancel This Bill ?'))
+                                                                 return false;"/>
+                                </div>
+                                <h:panelGroup id="gpPosBillWithoutLogo">
+                                    <bi:posOpdBillWithoutLogo bill="#{billSearch.bill}" duplicate="true"/>  
+
+                                </h:panelGroup>
+                            </h:panelGroup>
+
+                        </h:panelGroup>
+                    </p:panel>
+
+                    <p:panel rendered="#{billSearch.bill.billType eq 'CollectingCentreBill'}">
+                        <h:panelGroup rendered="#{sessionController.institutionPreference.opdBillPaperType eq 'FiveFivePaper'}" >
+                            <h:panelGroup id="gpBillPreviewCC" rendered="#{sessionController.institutionPreference.printLabelForOPdBill eq false
+                                                                           and sessionController.institutionPreference.applicationInstitution eq 'Ruhuna'
+                                                                           and sessionController.institutionPreference.fiveFivePaperWithHeadings eq false}">
+                                <div class="nonPrintBlock">
+                                    <p:commandButton value="Print" ajax="false" action="#"  >
+                                        <p:printer target="gpBillPreviewCC" ></p:printer>
+                                    </p:commandButton>
+                                </div>
+                                <bi:opdCCBillPrintRuhunu bill="#{billSearch.bill}" dup="true"/>
+                                <!--  <br/>
+                                                        <h:panelGroup >
+                                                            <bi:opdBillPrintRuhunu bill="#{billSearch.bill.cancelledBill}" />                        
+                                                        </h:panelGroup>-->
 
                             </h:panelGroup>
                         </h:panelGroup>
-
-                    </h:panelGroup>
+                    </p:panel>
 
 
                 </h:form>
