--- a/src/main/webapp/lab/lab_patient_report_print.xhtml
+++ b/src/main/webapp/lab/lab_patient_report_print.xhtml
@@ -191,7 +191,7 @@
                                             <table  style="width: 100%!important;">                 
                                                 <ui:repeat  value="#{patientReportController.currentPatientReport.patientReportItemValues}" var="prv" >
 
-                                                    <h:panelGroup rendered="#{prv.investigationItem.ixItemType eq 'Value' and prv.investigationItem.ixItemValueType eq 'Memo' and prv.investigationItem.retired eq false and prv.lobValue ne '' and prv.lobValue ne null and prv.investigationItem.transCssTop  lt 50 }" >
+                                                    <h:panelGroup rendered="#{prv.investigationItem.ixItemType eq 'Value' and prv.investigationItem.ixItemValueType eq 'Memo' and prv.investigationItem.retired eq false and prv.lobValue ne '' and prv.lobValue ne null and prv.investigationItem.riTop  lt 50 }" >
                                                         <tr >
                                                             <td style="min-width: 250px; vertical-align: top;">
                                                                 <br/>
@@ -203,7 +203,7 @@
                                                         </tr>
                                                     </h:panelGroup>
 
-                                                    <h:panelGroup rendered="#{prv.investigationItem.ixItemType eq 'DynamicLabel' and prv.investigationItem.retired eq false and prv.investigationItem.transCssTop  lt 50 }" >
+                                                    <h:panelGroup rendered="#{prv.investigationItem.ixItemType eq 'DynamicLabel' and prv.investigationItem.retired eq false and prv.investigationItem.riTop  lt 50 }" >
                                                         <tr >
                                                             <td style="min-width: 250px;">
                                                                 <h:outputLabel value="#{prv.investigationItem.name}"  escape="false"  />
@@ -274,7 +274,7 @@
                                         <td id="miccomments">
                                             <table>
                                                 <ui:repeat  value="#{patientReportController.currentPatientReport.patientReportItemValues}" var="prv" >
-                                                    <h:panelGroup rendered="#{prv.investigationItem.ixItemType eq 'Value' and prv.investigationItem.ixItemValueType eq 'Memo' and prv.investigationItem.retired eq false and prv.lobValue ne '' and prv.lobValue ne null and prv.investigationItem.transCssTop gt 50 }" >
+                                                    <h:panelGroup rendered="#{prv.investigationItem.ixItemType eq 'Value' and prv.investigationItem.ixItemValueType eq 'Memo' and prv.investigationItem.retired eq false and prv.lobValue ne '' and prv.lobValue ne null and prv.investigationItem.riTop gt 50 }" >
 
                                                         <tr>
                                                             <td style="min-width: 250px;padding: 5px;padding-left: 1px; padding-right: 1px;">
