Signed-off-by: Ruhunu <ruhunu@192.168.122.221>

--- a/src/main/webapp/resources/pharmacy/po.xhtml
+++ b/src/main/webapp/resources/pharmacy/po.xhtml
@@ -110,7 +110,7 @@
                     </p:column>
 
                     
-                    <p:column  style="width: 2cm!important; text-align: right!important; padding-right: 0.25cm;;">
+                    <p:column  style="width: 2cm!important; text-align: right!important; padding-right: 0.25cm;" rendered="#{sessionController.userPreference.applicationInstitution eq 'Rmh'}">
                         <f:facet name="header">
                             <h:outputLabel value="Rate"/>
                         </f:facet>
